k8s/online-inference-pod-traced.yaml
apiVersion: v1
kind: Pod
metadata:
  name: online-inference-traced
  labels:
    name: online-inference-confmap
spec:
  containers:
    # this pod will write logs to a file, which can be later
    # examined via ssh
    # (somehow I cannot find a proper way to access the service
    # from the outside except port forwarding)
    - name: online-inference
      image: sudotouchwoman/wbcd-online-inference:v2
      # environmental variables used to configure the application
      # are collected from the configMap
      # note that the key names may differ from the actual envar names
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 5000
