k8s/online-inference-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: online-inference
  labels:
    name: online-inference
spec:
  containers:
    - name: online-inference
      image: sudotouchwoman/wbcd-online-inference:v1
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 5000
