k8s/rolling-deployment.yaml
# pods are superseded one by one
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wbcd-api
spec:
  replicas: 4
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: wbcd-api
  template:
    metadata:
      labels:
        app: wbcd-api
        env: dev
        kind: inference
    spec:
      containers:
      - name: wbcd-api
        image: sudotouchwoman/wbcd-online-inference:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
        # readiness probe will succeed when the first sleep is finished and the server loads
        # all config/data on startup (takes about a second or two)
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 10
