k8s/wbcd-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: wbcd-api
spec:
 type: ClusterIP
 selector:
   app: wbcd-api
 ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
