k8s/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: ingress-hosts
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wbcd-api
                port:
                  number: 5000
